[package]
name = "liquidity-gauge-v4-tests"
version = "0.2.1"
authors = ["David Tai <david.tai@rengo.capital>"]
edition = "2018"

[dependencies]
casper-types = "1.5.0"
casper-engine-test-support = "2.1.0"
casperlabs-contract-utils = "0.2.1"
crv20 = "0.1.0"
casperlabs-test-env = "0.3.0"
casper_types_derive = "0.1.0"
blake2 = "0.9.1"
hex = "0.4.3"
base64 = "0.13.0"
common = { path = "../../common" }
casper-contract = { version = "1.4.4", default-features = false, features = [
  "test-support",
] }

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]